# such_empty

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  deps.py  main.py
backend/app/api/v1/: __init__.py  deps.py
backend/app/api/v1/routers/: items.py  locations.py  stock.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  item.py  location.py  stock_movement.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  item.py  location.py  stock_movement.py
backend/app/schemas/: __init__.py  item.py  location.py  stock_movement.py
backend/app/tests/: test_health.py  test_items.py  test_locations.py
backend/tests/: test_health.py
frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/(inventory)/items/: page.tsx
frontend/src/app/(inventory)/locations/: page.tsx
frontend/src/components/: DataTable.tsx  ItemForm.tsx  LocationForm.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
infra/keycloak/: README.md
